--- a/_config.yml
+++ b/_config.yml
@@ -103,8 +103,7 @@ facebook_id: # your facebook id
 youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 discord_id: # your discord id (18-digit unique numerical identifier)
 
-contact_note: >
-  You can even add a little note about which of these is the best way to reach you.
+contact_note: The best way to reach me would be via email
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
@@ -260,8 +259,8 @@ display_tags: ['formatting', 'images', 'links', 'math', 'code'] # this tags will
 
 scholar:
 
-  last_name: [Einstein]
-  first_name: [Albert, A.]
+  last_name: [Joshi]
+  first_name: [Neelanchal]
 
   style: apa
   locale: en
