added two repos to _data/repositories.yml

--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -4,3 +4,5 @@ github_users:
 github_repos:
   - neelanchaljoshi/neelanchaljoshi.github.io
   - neelanchaljoshi/local_correlation_tracking
+  - neelanchaljoshi/learning-julia
+  - neelanchaljoshi/learning-jax
