changed year in cv to include span

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -13,17 +13,17 @@
   contents:
     - title: PhD in Physics
       institution: University of Goettingen, MPI for Solar System Research
-      year: 2022
+      year: 2022 - present
 
     - title: BE in Electrical and Electronics Engineering
       institution: BITS Pilani
-      year: 2017
+      year: 2017 - 2022
       description:
         - Thesis - Estimating structural and dynamical parameters for Red Giants using MCMC simulations
 
     - title: MSc in Physics
       institution: BITS Pilani
-      year: 2017
+      year: 2017 - 2022
       description:
         - Thesis - Solar Magnetogram Generation using Deep Learning
 
