added czs school to the repositories page

--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -6,3 +6,4 @@ github_repos:
   - neelanchaljoshi/local_correlation_tracking
   - neelanchaljoshi/learning-julia
   - neelanchaljoshi/learning-jax
+  - neelanchaljoshi/CZS-summer-school
